--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,7 @@ position: relative; /* боковая колонка перемещается в
 #header {
 	height: 150px;
 	background: #FFFFFF;
-position: relative; /* боковая колонка перемещается в рамках основного содержания */
-  margin: 0 auto; /* сайт располагается по центру экрана */
-  max-width: 1100px; /* резиновая, растягивается до значения в 1200px */
-  min-width: 450px;
+
 }
 .center {display: block; margin:0 auto;}
 
@@ -43,14 +40,14 @@ position: relative; /* боковая колонка перемещается в
 }
 .menu a{ 
         color:#000000;
-        text-decoration: none; 
+        text-decoration: none;   
  
 }
 .menu{ 
         text-align:center;
         font-size:26px;
 	font-family:Arial; 
-        padding: 10px 0px 10px;   
+        padding: 10px 0px 10px;    
 }
 
 #header3 {
@@ -66,6 +63,49 @@ position: relative; /* боковая колонка перемещается в
      text-align:center;
      padding: 10px 0px 5px; 
 }
+
+/* For button input
+-----------------------------------------------------------------------------*/
+
+ input[type="button"]  {
+	background: rgb(254,231,154);
+	background: -moz-linear-gradient(top,  rgba(254,231,154,1) 0%, rgba(254,193,81,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
+	background: -o-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
+	background: linear-gradient(top,  rgba(254,231,154,1) 0%,rgba(254,193,81,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fee79a', endColorstr='#fec151',GradientType=0 );
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	-o-border-radius: 30px;
+	border-radius: 30px;
+	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	-moz-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	-ms-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	-o-box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
+	border: 1px solid #D69E31;
+	color: #85592e;
+	cursor: pointer;
+	float: center;
+	font: bold 15px Helvetica, Arial, sans-serif;
+	height: 35px;
+	left: 35px;
+	position: relative;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+	
+}
+input[type="button"]:hover {
+	background: rgb(254,193,81);
+	background: -moz-linear-gradient(top,  rgba(254,193,81,1) 0%, rgba(254,231,154,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+	background: -o-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+	background: linear-gradient(top,  rgba(254,193,81,1) 0%,rgba(254,231,154,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fec151', endColorstr='#fee79a',GradientType=0 );
+}
+
 
 
 /* Middle
