--- a/css/style.css
+++ b/css/style.css
@@ -42,17 +42,17 @@ body {
 }
 
 #header_menu {
+   
         width:100%;
 	background: #D3D3DA;
-        min-height: 50px;
+        min-height: 100px;
         height: auto;
 }
 
 .menu { 
         text-align:center;
         font-size:26px;
-	font-family:Arial; 
-        padding: 10px 0px 10px;    
+	font-family:Arial;   
 }
 
 
@@ -119,6 +119,7 @@ h3 {
 	border-radius: 3px;
 }
 
+
 /* меню справа */
 .nav.right ul {
 	text-align: right;
@@ -136,16 +137,16 @@ h3 {
 	}	
 	.nav ul {
 		width: 220px;
-		padding: 5px 5px 5px 5px ;
+		padding: 25px 5px 5px 5px ;
 		position: absolute;
 		top: 0;
 		left: 0;
 		right: 10px;
-		background: #D3D3DA url(icon-menu.png) no-repeat 25px 11px;
+		background: #D3D3DA url(icon-menu.png) no-repeat 55px 11px;
 		
 		
 	}
-	.nav li {
+	.nav li{
 		display: none; /* скрыть все <li> пункты */
 		margin: 0;
                  
@@ -195,7 +196,43 @@ h3 {
 }
 
 /*--The end--Menu for mobile--The end--*/
+
+
+#slides{ 
+text-align: center;
+position: relative; 
+top: 50px; 
+height: 300px; 
+padding: 0px; 
+list-style-type: none; 
+} 
+#slides1{ 
+text-align: center; 
+} 
+#slides1 img{ padding-top:30px;}
+
+.slide{ 
+position: absolute; 
+left: 0px; 
+top: 0px; 
+width: 100%; 
+height: 100%; 
+opacity: 0; 
+z-index: 1; 
+
+-webkit-transition: opacity 1s; 
+-moz-transition: opacity 1s; 
+-o-transition: opacity 1s; 
+transition: opacity 1s; 
+} 
+
+.showing{ 
+opacity: 1; 
+z-index: 2; 
+}
+
 #header3 {
+     position: relative;
         width:100%;
 	background: #F19900;
 	min-height: 50px;
