--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 p {
 	margin: 0 0 18px
 }
-img{max-width: 100%; height: auto;  width:90%; alt: none}
+img{max-width: 100%; height: auto;  width:90%; alt: none; }
 .g {max-width: 20%; height: 50%;text-align:center;}
 
 table thead {
@@ -138,7 +138,7 @@ h3 {
 	.nav ul {
 		width: 220px;
 		padding: 25px 5px 5px 5px ;
-		position: absolute;
+		position: relative;
 		top: 0;
 		left: 0;
 		right: 10px;
@@ -231,13 +231,14 @@ opacity: 1;
 z-index: 2; 
 }
 
+/*
 #header3 {
-     position: relative;
+     position: absolute;
         width:100%;
 	background: #F19900;
 	min-height: 50px;
         height: auto;
-}
+}*/
 nav {
 text-align:center;
         font-size:20px;
@@ -301,6 +302,7 @@ a {
 }
 
 .p_header3 {
+	background: #F19900;
      font-family:Arial;
      font-size:28px;
      color:#FFFFFF;
@@ -439,3 +441,19 @@ padding-left: 20px;
 	background:#D3D3DA;
 }
 
+#updown {
+  height: 9px;
+  width: 14px;
+  position: fixed;
+  top: 30px;
+  left: 10px;
+  cursor: pointer;
+}
+
+#updown.up {
+  background: url(http://localhost/auto.ru/img/up.png) left top;
+}
+
+#updown.down {
+  background: url(http://localhost/auto.ru/img/up.png) left -9px;
+}
